[fix] (ABC-1363): Fix scheduler bugs (#976)
* [fix] (ABC-1363): Display all day events with no end and start in past

* [fix] (ABC-1363): Fix zoom to fit in vertical scheduler timeline

* [fix] (ABC-1363): Fix events with no end overlapping

* [fix] (ABC-1363): Add background to calendar month show more button

* [fix] (ABC-1363): Add missing class to calendar

--- a/src/modules/base/primitiveSchedulerCalendar/primitiveSchedulerCalendar.css
+++ b/src/modules/base/primitiveSchedulerCalendar/primitiveSchedulerCalendar.css
@@ -45,6 +45,15 @@
     max-height: inherit;
 }
 
+.avonni-primitive-scheduler-calendar__month-show-more-button {
+    background: linear-gradient(
+        0deg,
+        var(--lwc-colorBackgroundAlt, #fff),
+        transparent
+    );
+    z-index: 2;
+}
+
 .avonni-scheduler__calendar-header {
     --avonni-primitive-scheduler-header-group-cell-color-background: #fff;
     --avonni-primitive-scheduler-header-group-cell-height: 2.5rem;
